# hip-bench

./: CMakeLists.txt  README.md
kernels/: matmul.hip  matmul.hpp  noop.hip  noop.hpp  vector_add.hip  vector_add.hpp
src/: main.cpp  timer.hpp
